--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -7,11 +7,13 @@
 
     <link rel="stylesheet" href="../static/bulma.min.css"/>
     <link rel="stylesheet" href="../static/bulma-pageloader.min.css"/>
-    <script src="../static/all.js"></script>
     <script src="../static/jquery-3.3.1.min.js"></script>
+
+    <script src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
-<section class="hero is-primary is-large">
+<body class="Site">
+<section class="hero is-primary is-large Site-header">
     <div class="hero-body">
         <div class="container">
             <h1 class="title">Recipe Wizard</h1>
@@ -19,7 +21,7 @@
         </div>
     </div>
 </section>
-<body>
+
 <section class="section">
     <div class="container">
         <p class="subtitle">
