--- a/back/templates/recipe.html
+++ b/back/templates/recipe.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Recipe</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
+    <link rel="stylesheet" href="../static/bulma.min.css"/>
+    <link rel="stylesheet" href="../static/bulma-pageloader.min.css"/>
+    <script src="../static/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="../static/bulma-pageloader.min.css">
-    <script
-      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
-    ></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  </head>
-  <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+
+    <script src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+</head>
+
+<body>
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <strong>Recipe Wizard</strong>
-      </a>
-      </a>
+        <a class="navbar-item" href="/">
+            <strong>Recipe Wizard</strong>
+        </a>
+        </a>
     </div>
-  </nav>
-  <body>
+</nav>
 
-    <div class="recipe-image">
-        <img class="custom-img" src="https://slevomat.sgcdn.cz/images/t/728x364c/80/83/8083126-5e948f.jpg"/>
-    </div>
+<div class="recipe-image">
+    <img class="custom-img" src="https://slevomat.sgcdn.cz/images/t/728x364c/80/83/8083126-5e948f.jpg"/>
+</div>
 
-    <h1 class="recipe-title">Name</h1>
+<h1 class="recipe-title">Name</h1>
 
-    <section class="section">
-      <div class="container">
+<section class="section">
+    <div class="container">
         <h4 class="subtitle is-4">Ingredients</h4>
 
         <div class="columns is-mobile">
@@ -39,52 +39,52 @@
                 <ul class="ingredients">
                 </ul>
             </div>
-        </div>  
-        
-      </div>
-        <hr>
-        <h4 class="subtitle is-4">Steps</h4>
-        <div class="columns is-mobile">
-              <div class="column is-11 is-offset-1">
-                  <ol class="directions">
-                  </ol>
-              </div>
-          </div>
-    </section>
+        </div>
 
-    <div id="bulma-pageloader" class="pageloader is-active"><span class="title">Loading...</span></div>
+    </div>
+    <hr>
+    <h4 class="subtitle is-4">Steps</h4>
+    <div class="columns is-mobile">
+        <div class="column is-11 is-offset-1">
+            <ol class="directions">
+            </ol>
+        </div>
+    </div>
+</section>
 
-    <script>
-      $(document).ready(() => {
-        $.ajax({
-          url : `http://${window.location.host}/detail`,
-          data: {
-            id: window.location.pathname.slice(8),
-          },
-          type : "GET",
-          async: false,
-          success : function(res) {
-            let directions = res.directions;
-            let ingredients = res.ingredients;
-            let name = res.name;
-            let picSrc = res.url;
+<div id="bulma-pageloader" class="pageloader is-active"><span class="title">Loading...</span></div>
 
-            $('.recipe-title').text(name);
-            $('.custom-img').attr('src', picSrc);
+<script>
+  $(document).ready(() => {
+    $.ajax({
+      url: `http://${window.location.host}/detail`,
+      data: {
+        id: window.location.pathname.slice(8),
+      },
+      type: "GET",
+      async: false,
+      success: function (res) {
+        let directions = res.directions;
+        let ingredients = res.ingredients;
+        let name = res.name;
+        let picSrc = res.url;
 
-            ingredients.forEach((ingredient) => {
-              $('.ingredients').append(`<li>${ingredient.charAt(0).toUpperCase() + ingredient.slice(1)}</li>`);
-            });
+        $('.recipe-title').text(name);
+        $('.custom-img').attr('src', picSrc);
 
-            directions.forEach((direction) => {
-              $('.directions').append(`<li>${direction}</li>`);
-            });
-
-            $('#bulma-pageloader').removeClass('is-active');
-          }
+        ingredients.forEach((ingredient) => {
+          $('.ingredients').append(`<li>${ingredient.charAt(0).toUpperCase() + ingredient.slice(1)}</li>`);
         });
-      });
-    </script>
 
-  </body>
+        directions.forEach((direction) => {
+          $('.directions').append(`<li>${direction}</li>`);
+        });
+
+        $('#bulma-pageloader').removeClass('is-active');
+      }
+    });
+  });
+</script>
+
+</body>
 </html>
